Content displays (mostly) correctly now
Checkmark is still messed up

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
 	padding: 0em 1.5em 0em 1.5em;
 	background-color: #000BFF;
 	border-bottom: 0.4em solid #0008B2;
+	cursor: default;
 }
 
 .nav-bar__title {
@@ -71,9 +72,37 @@
 	background-color: red;
 }
 
-/* For example, this makes the checkmark indicating that the answer is correct green. */
+/********* Content ********/
+.question__prompt {
+	margin: 1.6em 0.4em 0em 0.4em;
+	font-family: Open Sans;
+	font-size: 3.8em;
+	font-weight: normal;
+	text-align: left;
+	color: black;
+}
+
+.question__options {
+	display: block;
+	margin: auto;
+	margin-top: 1em;
+	border-collapse: collapse;
+	font-size: 2.8em;
+	cursor: pointer;
+}
+
+.question__options__option {
+	padding: 0.8em;
+	display: inline-block;
+}
+
 .question__options__option__correctness--correct {
+	position: relative;
+	top: -0.4em;
+	left: -0.4em;
 	fill: green;
+}
+.question__options__option__text {
 }
 
 /********* Footer *********/
@@ -88,6 +117,7 @@
 	padding: 0em 1.5em 0em 1.5em;
 	background-color: #000BFF;
 	border-top: 0.4em solid #0008B2;
+	cursor: default;
 }
 
 .quiz-info-bar__user {
